Finished v1 of StepTracker. Moved put_data to s3_utils.

--- a/nbs/s3_utils.ipynb
+++ b/nbs/s3_utils.ipynb
@@ -314,6 +314,28 @@
     "# export\n",
     "\n",
     "\n",
+    "def put_data(s3_res, bucket_name, key, binary_data):\n",
+    "    s3_res.Object(bucket_name, key).put(Body=binary_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "put_data(s3_res, bucket_name, test_root, \"value\".encode(\"utf-8\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "def upload_directory(s3_client, path, bucket_name, prefix):\n",
     "    for root, dirs, files in os.walk(path):\n",
     "        # Ignore non-python source files and IPython checkpoint files\n",
