--- a/nbs/tracking.ipynb
+++ b/nbs/tracking.ipynb
@@ -43,9 +43,15 @@
     "\n",
     "import datetime\n",
     "import json\n",
+    "import socket\n",
+    "import time\n",
     "import uuid\n",
+    "from pathlib import Path\n",
     "\n",
     "import boto3\n",
+    "import pandas as pd\n",
+    "from sacred import metrics_logger\n",
+    "from sacred.host_info import get_host_info\n",
     "from sacred.serializer import flatten\n",
     "from sacred.stdout_capturing import get_stdcapturer\n",
     "from sacred.utils import IntervalTimer\n",
@@ -53,8 +59,8 @@
     "from sciflow.s3_utils import (\n",
     "    delete_dir,\n",
     "    list_bucket,\n",
-    "    list_s3_subdirs,\n",
     "    objects_exist_in_dir,\n",
+    "    put_data,\n",
     "    s3_join,\n",
     ")"
    ]
@@ -64,6 +70,22 @@
    "metadata": {},
    "source": [
     "# Step-level"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def save_json(s3_res, bucket_name, key, filename, obj):\n",
+    "    key = s3_join(key, filename)\n",
+    "    put_data(\n",
+    "        s3_res, bucket_name, key, json.dumps(flatten(obj), sort_keys=True, indent=2)\n",
+    "    )"
    ]
   },
   {
@@ -94,17 +116,39 @@
     "        self._stop_heartbeat_event = None\n",
     "        self._heartbeat = None\n",
     "        self._output_file = None\n",
+    "        self._metrics = metrics_logger.MetricsLogger()\n",
     "        self.captured_out = None\n",
     "        self.saved_metrics = {}\n",
+    "        self.info = {}\n",
+    "        self.result = None\n",
+    "\n",
+    "        # TODO read run_entry from run.json...\n",
+    "        self.run_entry = {\n",
+    "            \"experiment_id\": self.flow_run_id,\n",
+    "            \"experiment\": {},\n",
+    "            \"format\": None,\n",
+    "            \"command\": None,\n",
+    "            \"host\": get_host_info(),\n",
+    "            \"all_hosts\": {socket.gethostname(): get_host_info()},\n",
+    "            \"start_time\": datetime.datetime.utcnow().isoformat(),\n",
+    "            \"config\": {},\n",
+    "            \"meta\": {},\n",
+    "            \"status\": \"RUNNING\",\n",
+    "            \"resources\": [],\n",
+    "            \"artifacts\": [],\n",
+    "            \"captured_out\": \"\",\n",
+    "            \"info\": self.info,\n",
+    "            \"heartbeat\": None,\n",
+    "        }\n",
     "\n",
     "        if region is not None:\n",
     "            self.region = region\n",
-    "            self.s3 = boto3.resource(\"s3\", region_name=region)\n",
+    "            self.s3_res = boto3.resource(\"s3\", region_name=region)\n",
     "        else:\n",
     "            session = boto3.session.Session()\n",
     "            if session.region_name is not None:\n",
     "                self.region = session.region_name\n",
-    "                self.s3 = boto3.resource(\"s3\")\n",
+    "                self.s3_res = boto3.resource(\"s3\")\n",
     "            else:\n",
     "                raise ValueError(\n",
     "                    \"You must either pass in an AWS region name, or have a \"\n",
@@ -113,10 +157,10 @@
     "\n",
     "        self.init_keys()\n",
     "\n",
-    "    def start_heartbeat(self):\n",
+    "    def start_heartbeat(self, beat_interval=10.0):\n",
     "        print(\"Starting Heartbeat\")\n",
     "        self._stop_heartbeat_event, self._heartbeat = IntervalTimer.create(\n",
-    "            _emit_heartbeat\n",
+    "            self._emit_heartbeat, beat_interval\n",
     "        )\n",
     "        self._heartbeat.start()\n",
     "\n",
@@ -141,72 +185,49 @@
     "            text = self.captured_out + text\n",
     "        self.captured_out = text\n",
     "\n",
-    "    def log_metrics(self, metrics_by_name):\n",
-    "        \"\"\"Store new measurements into metrics.json.\"\"\"\n",
-    "        for metric_name, metric_ptr in metrics_by_name.items():\n",
+    "    def log_metric(self, metric_name, metric_value, metric_step):\n",
+    "        if metric_name not in self.saved_metrics:\n",
+    "            self.saved_metrics[metric_name] = {\n",
+    "                \"values\": [],\n",
+    "                \"steps\": [],\n",
+    "                \"timestamps\": [],\n",
+    "            }\n",
     "\n",
-    "            if metric_name not in self.saved_metrics:\n",
-    "                self.saved_metrics[metric_name] = {\n",
-    "                    \"values\": [],\n",
-    "                    \"steps\": [],\n",
-    "                    \"timestamps\": [],\n",
-    "                }\n",
+    "        self.saved_metrics[metric_name][\"values\"].append(metric_value)\n",
+    "        self.saved_metrics[metric_name][\"steps\"].append(metric_step)\n",
+    "        self.saved_metrics[metric_name][\"timestamps\"].append(\n",
+    "            datetime.datetime.utcnow().isoformat()\n",
+    "        )\n",
+    "        save_json(\n",
+    "            self.s3_res,\n",
+    "            self.bucket_name,\n",
+    "            self.metrics_key,\n",
+    "            \"metrics.json\",\n",
+    "            self.saved_metrics,\n",
+    "        )\n",
     "\n",
-    "            self.saved_metrics[metric_name][\"values\"] += metric_ptr[\"values\"]\n",
-    "            self.saved_metrics[metric_name][\"steps\"] += metric_ptr[\"steps\"]\n",
-    "            timestamps_norm = [ts.isoformat() for ts in metric_ptr[\"timestamps\"]]\n",
-    "            self.saved_metrics[metric_name][\"timestamps\"] += timestamps_norm\n",
-    "        self.save_json(self.metrics_key, self.saved_metrics, \"metrics.json\")\n",
-    "\n",
-    "    def add_artifacts(self, artifacts):\n",
-    "        for name, filepath in artifacts:\n",
-    "            self.save_file(self.artifacts_key, filepath, name)\n",
-    "            self.run_entry[\"artifacts\"].append(name)\n",
-    "        self.save_json(self.runs_key, self.run_entry, \"run.json\")\n",
+    "    def add_artifact(self, artifact_path):\n",
+    "        name = Path(artifact_path).name\n",
+    "        self.save_file(self.artifacts_key, artifact_path, name)\n",
+    "        self.run_entry[\"artifacts\"].append(name)\n",
+    "        save_json(\n",
+    "            self.s3_res, self.bucket_name, self.runs_key, \"run.json\", self.run_entry\n",
+    "        )\n",
     "\n",
     "    def _emit_heartbeat(self):\n",
-    "        self.get_captured_out()\n",
-    "        # Read all measured metrics since last heartbeat\n",
-    "        logged_metrics = self._metrics.get_last_metrics()\n",
-    "        metrics_by_name = linearize_metrics(logged_metrics)\n",
-    "        self.log_metrics(metrics_by_name, self.info)\n",
-    "        beat_time = datetime.datetime.utcnow()\n",
-    "        self.run_entry[\"heartbeat\"] = beat_time.isoformat()\n",
+    "        beat_time = datetime.datetime.utcnow().isoformat()\n",
+    "        self.run_entry[\"heartbeat\"] = beat_time\n",
+    "        print(f\"Emitted heartbeat at: {beat_time}\")\n",
     "        self.run_entry[\"captured_out\"] = self.get_captured_out()\n",
     "        self.run_entry[\"result\"] = self.result\n",
-    "        self.save_json(self.runs_key, self.run_entry, \"run.json\")\n",
-    "\n",
-    "    def put_data(self, key, binary_data):\n",
-    "        self.s3.Object(self.bucket_name, key).put(Body=binary_data)\n",
-    "\n",
-    "    def save_json(self, table_dir, obj, filename):\n",
-    "        key = s3_join(table_dir, filename)\n",
-    "        self.put_data(key, json.dumps(flatten(obj), sort_keys=True, indent=2))\n",
+    "        save_json(\n",
+    "            self.s3_res, self.bucket_name, self.runs_key, \"run.json\", self.run_entry\n",
+    "        )\n",
     "\n",
     "    def save_file(self, file_save_dir, filename, target_name=None):\n",
     "        target_name = target_name or os.path.basename(filename)\n",
     "        key = s3_join(file_save_dir, target_name)\n",
-    "        self.put_data(key, open(filename, \"rb\"))\n",
-    "\n",
-    "    def save_sources(self, ex_info):\n",
-    "        base_dir = ex_info[\"base_dir\"]\n",
-    "        source_info = []\n",
-    "        for s, m in ex_info[\"sources\"]:\n",
-    "            abspath = os.path.join(base_dir, s)\n",
-    "            store_path, md5sum = self.find_or_save(abspath, self.source_key)\n",
-    "            source_info.append(\n",
-    "                [s, os.path.relpath(store_path, self.experiments_key_prefix)]\n",
-    "            )\n",
-    "        return source_info\n",
-    "\n",
-    "    def find_or_save(self, filename, store_dir):\n",
-    "        source_name, ext = os.path.splitext(os.path.basename(filename))\n",
-    "        md5sum = get_digest(filename)\n",
-    "        store_name = source_name + \"_\" + md5sum + ext\n",
-    "        store_path = s3_join(store_dir, store_name)\n",
-    "        if len(list_s3_subdirs(self.s3, self.bucket_name, prefix=store_path)) == 0:\n",
-    "            self.save_file(self.source_key, filename, store_path)\n",
-    "        return store_path, md5sum\n",
+    "        put_data(self.s3_res, self.bucket_name, key, open(filename, \"rb\"))\n",
     "\n",
     "    def init_keys(self):\n",
     "        self.runs_key = s3_join(self.exp_base_key, \"runs\")\n",
@@ -223,7 +244,7 @@
     "            self.source_key,\n",
     "        )\n",
     "        for key_to_check in self.keys:\n",
-    "            if objects_exist_in_dir(self.s3, self.bucket_name, key_to_check):\n",
+    "            if objects_exist_in_dir(self.s3_res, self.bucket_name, key_to_check):\n",
     "                raise FileExistsError(\n",
     "                    f\"S3 dir at {self.bucket_name}/{key_to_check} already exists; check your run_id is unique\"\n",
     "                )"
@@ -273,10 +294,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metrics_by_name = {\n",
-    "    \"auc\": {\"values\": [0.9], \"steps\": [1], \"timestamps\": [datetime.datetime.utcnow()]}\n",
-    "}\n",
-    "metrics_by_name"
+    "tracker.log_metric(\"auc\", 0.37, 0)\n",
+    "tracker.log_metric(\"auc\", 0.45, 1)\n",
+    "tracker.log_metric(\"auc\", 0.63, 2)\n",
+    "tracker.log_metric(\"auc\", 0.89, 3)"
    ]
   },
   {
@@ -285,7 +306,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tracker.log_metrics(metrics_by_name)"
+    "metrics_by_name = json.loads(\n",
+    "    pd.read_json(\n",
+    "        f\"s3://{bucket_name}/{flow_base_key}/{flow_run_id}/experiment/metrics/metrics.json\"\n",
+    "    ).to_json()\n",
+    ")"
    ]
   },
   {
@@ -294,7 +319,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_bucket(bucket_name, flow_run_key)"
+    "def metrics_to_df(metrics_by_name):\n",
+    "    metric_frames = []\n",
+    "    for metric_name, metric_ptr in metrics_by_name.items():\n",
+    "        metric_frame = pd.DataFrame(metric_ptr)\n",
+    "        metric_frame[\"metric\"] = metric_name\n",
+    "        metric_frames.append(metric_frame)\n",
+    "    metrics = pd.concat(metric_frames).reset_index(drop=True)\n",
+    "    metrics[\"flow_run_id\"] = flow_run_id\n",
+    "    return metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics = metrics_to_df(metrics_by_name)\n",
+    "assert metrics[\"steps\"].tolist() == [0, 1, 2, 3]\n",
+    "assert metrics[\"values\"].tolist() == [0.37, 0.45, 0.63, 0.89]\n",
+    "assert metrics[\"metric\"].tolist() == [\"auc\", \"auc\", \"auc\", \"auc\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contents = list_bucket(bucket_name, flow_run_key)\n",
+    "assert len(contents) == 1\n",
+    "assert contents[0].split(\"/\")[-1] == \"metrics.json\""
    ]
   },
   {
@@ -315,7 +371,8 @@
     "    print(\"Some text\")\n",
     "    print(\"Some text\")\n",
     "    tracker.get_captured_out()\n",
-    "assert tracker.captured_out == \"Some text\\nSome text\\n\""
+    "assert tracker.captured_out == \"Some text\\nSome text\\n\"\n",
+    "tracker.captured_out = None"
    ]
   },
   {
@@ -342,6 +399,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import tempfile\n",
+    "\n",
     "import pandas as pd"
    ]
   },
@@ -360,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.a.plot.hist()"
+    "%matplotlib auto"
    ]
   },
   {
@@ -369,34 +428,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df = pd.DataFrame({'a': [1,2,3], 'b': ['a', 'b', 'c']})\n",
-    "\n",
-    "# with tempfile.TemporaryDirectory() as temp_dir:\n",
-    "#     csv_path = f\"{temp_dir}/testfile.csv\"\n",
-    "#     df.to_csv(csv_path)\n",
-    "#     txt_path = f\"{temp_dir}/testfile.txt\"\n",
-    "#     df.to_csv(txt_path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Sources"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Resources"
+    "with tempfile.TemporaryDirectory() as temp_dir:\n",
+    "    csv_path = f\"{temp_dir}/testfile.csv\"\n",
+    "    df.to_csv(csv_path)\n",
+    "    txt_path = f\"{temp_dir}/testfile.txt\"\n",
+    "    df.to_csv(txt_path)\n",
+    "    fig = df.a.plot.hist().figure\n",
+    "    png_path = f\"{temp_dir}/testfile.png\"\n",
+    "    fig.savefig(png_path)\n",
+    "    pdf_path = f\"{temp_dir}/testfile.pdf\"\n",
+    "    fig.savefig(pdf_path)\n",
+    "    pickle_path = f\"{temp_dir}/testfile.pkl\"\n",
+    "    df.to_pickle(pickle_path)\n",
+    "    artifacts = [csv_path, txt_path, png_path, pdf_path, pickle_path]\n",
+    "    for artifact_path in artifacts:\n",
+    "        tracker.add_artifact(artifact_path)"
    ]
   },
   {
@@ -404,19 +450,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "# Host info"
+    "# mock tracker in user mode\n",
+    "# running in a flow??"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Heartbeat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tracker.capture_out() as tracker._output_file:\n",
+    "    tracker.start_heartbeat(1.0)\n",
+    "    print(\"Some text\")\n",
+    "    time.sleep(4)\n",
+    "    print(\"Some text\")\n",
+    "    tracker.stop_heartbeat()\n",
+    "    tracker.get_captured_out()\n",
+    "assert len([t for t in tracker.captured_out.split(\"\\n\") if t == \"Some text\"]) == 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run Entry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracker.run_entry"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -450,7 +526,51 @@
     "# export\n",
     "\n",
     "\n",
-    "def _emit_started(flow_run_id):\n",
+    "def tracking_started(s3_res, bucket_name, flow_base_key, flow_run_id):\n",
+    "    # Create run-entry\n",
+    "    # Write run.json\n",
+    "    # experiment = experiment_info - sacred.ingredient.experiment_info\n",
+    "    # Command = run_flow?\n",
+    "    # Config = params?\n",
+    "    # meta = startup metadata put in FlowTracker\n",
+    "\n",
+    "    host_info = get_host_info()\n",
+    "    self.run_entry = {\n",
+    "        \"experiment_id\": self.flow_run_id,\n",
+    "        \"experiment\": {},\n",
+    "        \"format\": None,\n",
+    "        \"command\": None,\n",
+    "        \"host\": host_info,\n",
+    "        \"all_hosts\": {socket.gethostname(): host_info},\n",
+    "        \"start_time\": datetime.datetime.utcnow().isoformat(),\n",
+    "        \"config\": {},\n",
+    "        \"meta\": {},\n",
+    "        \"status\": \"RUNNING\",\n",
+    "        \"resources\": [],\n",
+    "        \"artifacts\": [],\n",
+    "        \"captured_out\": \"\",\n",
+    "        \"info\": self.info,\n",
+    "        \"heartbeat\": None,\n",
+    "    }\n",
+    "\n",
+    "    runs_key = s3_join(flow_base_key, flow_run_id, \"experiment\", \"runs\")\n",
+    "\n",
+    "    save_json(s3_res, bucket_name, runs_key, run_entry, \"run.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def tracking_interrupted(flow_run_id):\n",
+    "    # Read run-entry from run.json\n",
+    "    # Add interrupt\n",
+    "    # Write run.json\n",
     "    pass"
    ]
   },
@@ -463,7 +583,10 @@
     "# export\n",
     "\n",
     "\n",
-    "def _emit_interrupted(flow_run_id):\n",
+    "def tracking_failed(flow_run_id):\n",
+    "    # Read run-entry from run.json\n",
+    "    # Add failure\n",
+    "    # Write run.json\n",
     "    pass"
    ]
   },
@@ -476,20 +599,10 @@
     "# export\n",
     "\n",
     "\n",
-    "def _emit_failed(flow_run_id):\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def _emit_completed(flow_run_id):\n",
+    "def tracking_completed(flow_run_id):\n",
+    "    # Read run-entry from run.json\n",
+    "    # Add failure\n",
+    "    # Write run.json\n",
     "    pass"
    ]
   }
