End to end flow and step tracking - working from S3 perspective - still requires integration into flows

--- a/nbs/s3_utils.ipynb
+++ b/nbs/s3_utils.ipynb
@@ -26,6 +26,7 @@
    "source": [
     "# export\n",
     "\n",
+    "import json\n",
     "import os\n",
     "import re\n",
     "import socket\n",
@@ -324,7 +325,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "put_data(s3_res, bucket_name, test_root, \"value\".encode(\"utf-8\"))"
+    "put_data(s3_res, bucket_name, s3_join(test_root, \"put-test\"), \"value\".encode(\"utf-8\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = (\n",
+    "    s3_res.Object(bucket_name, s3_join(test_root, \"put-test\"))\n",
+    "    .get()[\"Body\"]\n",
+    "    .read()\n",
+    "    .decode(\"utf-8\")\n",
+    ")\n",
+    "assert \"value\" == result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def load_json(s3_res, bucket_name, key):\n",
+    "    obj = s3_res.Object(bucket_name, key)\n",
+    "    return json.load(obj.get()[\"Body\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index_nb_json = load_json(s3_res, bucket_name, listed_keys[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert type(index_nb_json) == dict\n",
+    "assert \"cells\" in index_nb_json"
    ]
   },
   {
