--- a/nbs/tracking.ipynb
+++ b/nbs/tracking.ipynb
@@ -44,6 +44,7 @@
     "import datetime\n",
     "import json\n",
     "import socket\n",
+    "import tempfile\n",
     "import time\n",
     "import uuid\n",
     "from pathlib import Path\n",
@@ -59,17 +60,34 @@
     "from sciflow.s3_utils import (\n",
     "    delete_dir,\n",
     "    list_bucket,\n",
-    "    objects_exist_in_dir,\n",
+    "    load_json,\n",
     "    put_data,\n",
     "    s3_join,\n",
-    ")"
+    ")\n",
+    "from sciflow.utils import prepare_env"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Step-level"
+    "prepare_env()\n",
+    "bucket_name = os.environ[\"SCIFLOW_BUCKET\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flow_base_key = \"sciflow-testing-unlikely-existing-key\"\n",
+    "flow_run_id = f\"sample_flow_instance_{str(uuid.uuid4())}\"\n",
+    "flow_run_key = s3_join(flow_base_key, flow_run_id)\n",
+    "s3_res = boto3.resource(\"s3\")\n",
+    "flow_base_key"
    ]
   },
   {
@@ -89,6 +107,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Flow-level"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -97,7 +122,175 @@
     "# export\n",
     "\n",
     "\n",
-    "class StepTracker:\n",
+    "def tracking_started(s3_res, bucket_name, flow_base_key, flow_run_id):\n",
+    "    # Create run-entry\n",
+    "    # Write run.json\n",
+    "    # experiment = experiment_info - sacred.ingredient.experiment_info\n",
+    "    # Command = run_flow?\n",
+    "    # Config = params?\n",
+    "    # meta = startup metadata put in FlowTracker\n",
+    "\n",
+    "    host_info = get_host_info()\n",
+    "    run_entry = {\n",
+    "        \"experiment_id\": flow_run_id,\n",
+    "        \"experiment\": {},\n",
+    "        \"format\": None,\n",
+    "        \"command\": None,\n",
+    "        \"host\": host_info,\n",
+    "        \"all_hosts\": {socket.gethostname(): host_info},\n",
+    "        \"start_time\": time.time(),\n",
+    "        \"config\": {},\n",
+    "        \"meta\": {},\n",
+    "        \"status\": \"RUNNING\",\n",
+    "        \"resources\": [],\n",
+    "        \"artifacts\": [],\n",
+    "        \"captured_out\": \"\",\n",
+    "        \"info\": {},\n",
+    "        \"heartbeat\": None,\n",
+    "    }\n",
+    "\n",
+    "    runs_key = s3_join(flow_base_key, flow_run_id, \"experiment\", \"runs\")\n",
+    "    save_json(s3_res, bucket_name, runs_key, \"run.json\", run_entry)\n",
+    "    save_json(s3_res, bucket_name, runs_key, \"flow_start_run.json\", run_entry)\n",
+    "    print(f\"Started tracking flow: {flow_run_id}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracking_started(s3_res, bucket_name, flow_base_key, flow_run_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def _tracking_event(s3_res, bucket_name, flow_base_key, flow_run_id, event_status):\n",
+    "    run_entry_key = s3_join(flow_base_key, flow_run_id, \"experiment\", \"runs\")\n",
+    "    run_entry = load_json(s3_res, bucket_name, s3_join(run_entry_key, \"run.json\"))\n",
+    "    run_entry[\"status\"] = event_status\n",
+    "    run_entry[\"stop_time\"] = time.time()\n",
+    "    run_entry[\"elapsed_time\"] = round(\n",
+    "        run_entry[\"stop_time\"] - run_entry[\"start_time\"], 2\n",
+    "    )\n",
+    "    save_json(s3_res, bucket_name, run_entry_key, \"run.json\", run_entry)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def tracking_interrupted(s3_res, bucket_name, flow_base_key, flow_run_id):\n",
+    "    _tracking_event(s3_res, bucket_name, flow_base_key, flow_run_id, \"INTERRUPTED\")\n",
+    "    print(f\"Flow tracking interrupted: {flow_run_id}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def tracking_failed(s3_res, bucket_name, flow_base_key, flow_run_id):\n",
+    "    _tracking_event(s3_res, bucket_name, flow_base_key, flow_run_id, \"FAILED\")\n",
+    "    print(f\"Flow tracking failed: {flow_run_id}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def tracking_completed(s3_res, bucket_name, flow_base_key, flow_run_id):\n",
+    "    _tracking_event(s3_res, bucket_name, flow_base_key, flow_run_id, \"COMPLETED\")\n",
+    "    print(f\"Flow tracking completed: {flow_run_id}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step-level"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SciflowTracker:\n",
+    "    def log_metric(self, metric_name, metric_value, metric_step):\n",
+    "        pass\n",
+    "\n",
+    "    def add_artifact(self, artifact_path):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TempFileTracker(SciflowTracker):\n",
+    "    def __init__(metrics_path=None, artifacts_dir=None):\n",
+    "        self.metrics_path = metrics_path\n",
+    "        self.artifacts_dir = artifacts_dir\n",
+    "\n",
+    "    def log_metric(self, metric_name, metric_value, metric_step):\n",
+    "        # Append to csv dataframe\n",
+    "        pass\n",
+    "\n",
+    "    def add_artifact(self, artifact_path):\n",
+    "        # Save file to tmp directory\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MockTracker(SciflowTracker):\n",
+    "    def log_metric(self, metric_name, metric_value, metric_step):\n",
+    "        pass\n",
+    "\n",
+    "    def add_artifact(self, artifact_path):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "class StepTracker(SciflowTracker):\n",
     "    def __init__(\n",
     "        self,\n",
     "        bucket_name,\n",
@@ -122,24 +315,13 @@
     "        self.info = {}\n",
     "        self.result = None\n",
     "\n",
-    "        # TODO read run_entry from run.json...\n",
-    "        self.run_entry = {\n",
-    "            \"experiment_id\": self.flow_run_id,\n",
-    "            \"experiment\": {},\n",
-    "            \"format\": None,\n",
-    "            \"command\": None,\n",
-    "            \"host\": get_host_info(),\n",
-    "            \"all_hosts\": {socket.gethostname(): get_host_info()},\n",
-    "            \"start_time\": datetime.datetime.utcnow().isoformat(),\n",
-    "            \"config\": {},\n",
-    "            \"meta\": {},\n",
-    "            \"status\": \"RUNNING\",\n",
-    "            \"resources\": [],\n",
-    "            \"artifacts\": [],\n",
-    "            \"captured_out\": \"\",\n",
-    "            \"info\": self.info,\n",
-    "            \"heartbeat\": None,\n",
-    "        }\n",
+    "        self.flow_start_run_entry = load_json(\n",
+    "            s3_res,\n",
+    "            bucket_name,\n",
+    "            s3_join(self.exp_base_key, \"runs\", \"flow_start_run.json\"),\n",
+    "        )\n",
+    "        self.run_entry = self.flow_start_run_entry\n",
+    "        self.run_entry[\"all_hosts\"][socket.gethostname()] = get_host_info()\n",
     "\n",
     "        if region is not None:\n",
     "            self.region = region\n",
@@ -213,6 +395,13 @@
     "        save_json(\n",
     "            self.s3_res, self.bucket_name, self.runs_key, \"run.json\", self.run_entry\n",
     "        )\n",
+    "        save_json(\n",
+    "            self.s3_res,\n",
+    "            self.bucket_name,\n",
+    "            self.runs_key,\n",
+    "            f\"step_{self.step_name}.json\",\n",
+    "            self.run_entry,\n",
+    "        )\n",
     "\n",
     "    def _emit_heartbeat(self):\n",
     "        beat_time = datetime.datetime.utcnow().isoformat()\n",
@@ -222,6 +411,28 @@
     "        self.run_entry[\"result\"] = self.result\n",
     "        save_json(\n",
     "            self.s3_res, self.bucket_name, self.runs_key, \"run.json\", self.run_entry\n",
+    "        )\n",
+    "        save_json(\n",
+    "            self.s3_res,\n",
+    "            self.bucket_name,\n",
+    "            self.runs_key,\n",
+    "            f\"step_{self.step_name}.json\",\n",
+    "            self.run_entry,\n",
+    "        )\n",
+    "\n",
+    "    def complete_step_tracking(self):\n",
+    "        self.run_entry[\"captured_out\"] = self.get_captured_out()\n",
+    "        self.run_entry[\"result\"] = self.result\n",
+    "        save_json(\n",
+    "            self.s3_res, self.bucket_name, self.runs_key, \"run.json\", self.run_entry\n",
+    "        )\n",
+    "        self.run_entry[\"status\"] = \"COMPLETED\"\n",
+    "        save_json(\n",
+    "            self.s3_res,\n",
+    "            self.bucket_name,\n",
+    "            self.runs_key,\n",
+    "            f\"step_{self.step_name}.json\",\n",
+    "            self.run_entry,\n",
     "        )\n",
     "\n",
     "    def save_file(self, file_save_dir, filename, target_name=None):\n",
@@ -242,12 +453,7 @@
     "            self.artifacts_key,\n",
     "            self.resource_key,\n",
     "            self.source_key,\n",
-    "        )\n",
-    "        for key_to_check in self.keys:\n",
-    "            if objects_exist_in_dir(self.s3_res, self.bucket_name, key_to_check):\n",
-    "                raise FileExistsError(\n",
-    "                    f\"S3 dir at {self.bucket_name}/{key_to_check} already exists; check your run_id is unique\"\n",
-    "                )"
+    "        )"
    ]
   },
   {
@@ -256,29 +462,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bucket_name = \"pprsandboxpdlras3\"\n",
-    "flow_base_key = \"flow-\" + str(uuid.uuid4())\n",
-    "flow_run_id = \"sample_flow_instance_123\"\n",
-    "flow_run_key = s3_join(flow_base_key, flow_run_id)\n",
-    "s3_res = boto3.resource(\"s3\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flow_base_key"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tracker = StepTracker(bucket_name, flow_base_key, flow_run_id, \"experiment-test\")"
+    "step_name = \"experiment-test\"\n",
+    "tracker = StepTracker(bucket_name, flow_base_key, flow_run_id, step_name)"
    ]
   },
   {
@@ -349,8 +534,17 @@
    "outputs": [],
    "source": [
     "contents = list_bucket(bucket_name, flow_run_key)\n",
-    "assert len(contents) == 1\n",
-    "assert contents[0].split(\"/\")[-1] == \"metrics.json\""
+    "assert len(contents) >= 1\n",
+    "assert (\n",
+    "    len(\n",
+    "        [\n",
+    "            Path(c).name\n",
+    "            for c in contents\n",
+    "            if Path(c).name == \"metrics.json\" or Path(c).name == \"run.json\"\n",
+    "        ]\n",
+    "    )\n",
+    "    == 2\n",
+    ")"
    ]
   },
   {
@@ -391,17 +585,6 @@
     "* `.jpg`: `image/jpeg`,\n",
     "* `.mp4`: `video/mp4`,\n",
     "* `.pickle`: `application/octet-stream`,"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tempfile\n",
-    "\n",
-    "import pandas as pd"
    ]
   },
   {
@@ -468,10 +651,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# slow\n",
+    "\n",
     "with tracker.capture_out() as tracker._output_file:\n",
     "    tracker.start_heartbeat(1.0)\n",
     "    print(\"Some text\")\n",
-    "    time.sleep(4)\n",
+    "    time.sleep(3)\n",
     "    print(\"Some text\")\n",
     "    tracker.stop_heartbeat()\n",
     "    tracker.get_captured_out()\n",
@@ -482,7 +667,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run Entry"
+    "# Finish Tracking"
    ]
   },
   {
@@ -491,14 +676,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tracker.run_entry"
+    "step_entry_key = s3_join(\n",
+    "    flow_base_key, flow_run_id, \"experiment\", \"runs\", f\"step_{step_name}.json\"\n",
+    ")\n",
+    "step_entry = load_json(s3_res, bucket_name, step_entry_key)\n",
+    "assert step_entry[\"status\"] == \"RUNNING\""
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Tear-down - delete created remote objects"
+    "tracker.complete_step_tracking()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step_entry_key = s3_join(\n",
+    "    flow_base_key, flow_run_id, \"experiment\", \"runs\", f\"step_{step_name}.json\"\n",
+    ")\n",
+    "step_entry = load_json(s3_res, bucket_name, step_entry_key)\n",
+    "assert step_entry[\"status\"] == \"COMPLETED\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracking_completed(s3_res, bucket_name, flow_base_key, flow_run_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_entry_key = s3_join(flow_base_key, flow_run_id, \"experiment\", \"runs\", \"run.json\")\n",
+    "run_entry = load_json(s3_res, bucket_name, run_entry_key)\n",
+    "assert run_entry[\"status\"] == \"COMPLETED\""
    ]
   },
   {
@@ -514,7 +738,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Flow-level"
+    "# Test Full Flow Tracking"
    ]
   },
   {
@@ -523,87 +747,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
+    "# slow\n",
     "\n",
+    "tracking_started(s3_res, bucket_name, flow_base_key, flow_run_id)\n",
     "\n",
-    "def tracking_started(s3_res, bucket_name, flow_base_key, flow_run_id):\n",
-    "    # Create run-entry\n",
-    "    # Write run.json\n",
-    "    # experiment = experiment_info - sacred.ingredient.experiment_info\n",
-    "    # Command = run_flow?\n",
-    "    # Config = params?\n",
-    "    # meta = startup metadata put in FlowTracker\n",
+    "tracker = StepTracker(bucket_name, flow_base_key, flow_run_id, step_name)\n",
     "\n",
-    "    host_info = get_host_info()\n",
-    "    self.run_entry = {\n",
-    "        \"experiment_id\": self.flow_run_id,\n",
-    "        \"experiment\": {},\n",
-    "        \"format\": None,\n",
-    "        \"command\": None,\n",
-    "        \"host\": host_info,\n",
-    "        \"all_hosts\": {socket.gethostname(): host_info},\n",
-    "        \"start_time\": datetime.datetime.utcnow().isoformat(),\n",
-    "        \"config\": {},\n",
-    "        \"meta\": {},\n",
-    "        \"status\": \"RUNNING\",\n",
-    "        \"resources\": [],\n",
-    "        \"artifacts\": [],\n",
-    "        \"captured_out\": \"\",\n",
-    "        \"info\": self.info,\n",
-    "        \"heartbeat\": None,\n",
-    "    }\n",
+    "with tempfile.TemporaryDirectory() as temp_dir:\n",
+    "    with tracker.capture_out() as tracker._output_file:\n",
+    "        tracker.start_heartbeat(1.0)\n",
+    "        print(\"Some text\")\n",
+    "        time.sleep(2)\n",
+    "        tracker.log_metric(\"auroc\", 0.5, 0)\n",
+    "        csv_path = f\"{temp_dir}/testfile.csv\"\n",
+    "        df.to_csv(csv_path)\n",
+    "        time.sleep(2)\n",
+    "        tracker.add_artifact(csv_path)\n",
+    "        time.sleep(2)\n",
+    "        fig = df.a.plot.hist().figure\n",
+    "        png_path = f\"{temp_dir}/testfile.png\"\n",
+    "        fig.savefig(png_path)\n",
+    "        tracker.add_artifact(png_path)\n",
+    "        print(\"Some text\")\n",
+    "        tracker.stop_heartbeat()\n",
+    "        tracker.get_captured_out()\n",
+    "        tracker.complete_step_tracking()\n",
     "\n",
-    "    runs_key = s3_join(flow_base_key, flow_run_id, \"experiment\", \"runs\")\n",
+    "tracking_completed(s3_res, bucket_name, flow_base_key, flow_run_id)\n",
+    "# Exception interrupt handling\n",
+    "# Failure\n",
     "\n",
-    "    save_json(s3_res, bucket_name, runs_key, run_entry, \"run.json\")"
+    "delete_dir(s3_res, bucket_name, flow_base_key)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# export\n",
+    "# TODO\n",
     "\n",
-    "\n",
-    "def tracking_interrupted(flow_run_id):\n",
-    "    # Read run-entry from run.json\n",
-    "    # Add interrupt\n",
-    "    # Write run.json\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def tracking_failed(flow_run_id):\n",
-    "    # Read run-entry from run.json\n",
-    "    # Add failure\n",
-    "    # Write run.json\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def tracking_completed(flow_run_id):\n",
-    "    # Read run-entry from run.json\n",
-    "    # Add failure\n",
-    "    # Write run.json\n",
-    "    pass"
+    "* Step elapsed time - create start time\n",
+    "* Merge all steps after flow completion - rewrite run.json"
    ]
   }
  ],
